# PVZDtnadmin

./: .coverage  .gitignore  .gitmodules  README.adoc  README.md  db.sqlite3  dumpdata.sh  manage.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
cli/: __init__.py  get_pep_logger.py  loggingconfig.py  patool.py  pep.py  pmp.py
common/: custom_header_middleware.py.unused  custom_remote_user_backend.py  custom_remote_user_middleware.py  get_policystore.py  load_groups.py  policystore_backend_django.py  pvzdlib_config.py  pytest_django_db.py  recreate_db.py  show_env.py
data/: auth_groups_init.json  auth_permissions_init.json
database/: db.sqlite3.before_reset  db.sqlite3.empty  db.sqlite3.sample  db.test.sqlite3.before_reset  initial_data.json
docs/: nginx_proxy.conf  proxyconf.md  runtime_env.sh  test_org.adoc
fedop/: poljournal_updater.py  update_poljournal.py.unused  urls.py  views.py.workinprogress
ldapgvat/: admin.py  models.py
pep/: get_policystore.py  pep.py
portaladmin/: apps.py  constants.py  exceptions.py  forms.py  policydict.py  receivers.py  receivers.py.unused  serializers.py  setEnv.sh  signals.py  test.py  urls.py  views.py
pvzdweb/: app_settings.py  pvzdlib_config.py  pvzdlib_config_dev.py  set_dotpgpass.py  settings.py  settings_allapps.py  settings_base.py  settings_dev.py  settings_dev_tnadmin.py  settings_fedop.py  settings_jenkins.py  settings_portaladmin.py  settings_prod_fedop.py  settings_prod_portaladmin.py  settings_prod_tnadmin.py  settings_pytest_dev.py  settings_test.py  settings_tnadmin.py  urls.py  wsgi.py  (+1 more)
(+245 files in other folders)
