[metadata]
name = PVZDweb
author = Rainer Hoerbe
description = Portalverbund Zentrale Dienste Web App
url = https://github.com/identinetics/PVZDweb
keywords =
  Identity and Access Management
  Federation Operation
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
python_requires >= 3.6